--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,11 @@
             <artifactId>HikariCP</artifactId>
             <version>3.2.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jodd</groupId>
+            <artifactId>jodd-mail</artifactId>
+            <version>5.0.3</version>
+        </dependency>
     </dependencies>
 </project>
