--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>groupId</groupId>
     <artifactId>update-app</artifactId>
     <version>1.0</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
